my first proplem

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ button {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -46,7 +46,7 @@ button {
 .title-text{
     font-weight: 700;
         font-size: 56px;
-        line-height: 1.07143;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
     color: #fff;
@@ -79,7 +79,7 @@ button {
 .team-title{
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
@@ -100,13 +100,19 @@ button {
         text-align: center;
         color: #434455;
 }
+.portfolio-section{
+    background-color: #fff;
+}
 .portfolio-title{
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+}
+.portfolio-item{
+    background-color: #fcfcfc;
 }
 .portfolio-subtitle{
     font-weight: 500;
@@ -129,7 +135,7 @@ button {
     font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
