--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,17 @@ button {
         letter-spacing: 0.02em;
         color: #2e2f42;
 }
+.header-menu-link:hover{
+        color: #404bbf;
+}
 .header-contact-link{
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+.header-contact-link:hover{
+        color: #404bbf;
 }
 .title-section{
     background-color: #2e2f42;
@@ -58,6 +64,10 @@ button {
         letter-spacing: 0.04em;
         color: #fff;
         background-color: #4d5ae5;
+}
+.title-btn:hover{
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #404bbf;
 }
 .advantages-subtitle{
     font-weight: 500;
@@ -83,6 +93,10 @@ button {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize;
+}
+.team-item{
+    background-color: #fff;
 }
 .team-subtitle{
     font-weight: 500;
@@ -110,6 +124,7 @@ button {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize;
 }
 .portfolio-item{
     background-color: #fcfcfc;
