--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ button {
         letter-spacing: 0.02em;
         color: #2e2f42;
 }
-.header-menu-link:hover{
+.header-menu-link:hover
+.header-menu-link:focus{
         color: #404bbf;
 }
 .header-contact-link{
@@ -43,7 +44,8 @@ button {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.header-contact-link:hover{
+.header-contact-link:hover,
+.header-contact-link:focus{
         color: #404bbf;
 }
 .title-section{
@@ -64,9 +66,10 @@ button {
         letter-spacing: 0.04em;
         color: #fff;
         background-color: #4d5ae5;
+        cursor: pointer;
 }
-.title-btn:hover{
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+.title-btn:hover,
+.title-btn:focus{
     background: #404bbf;
 }
 .advantages-subtitle{
