--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ button {
         letter-spacing: 0.02em;
         color: #2e2f42;
 }
-.header-menu-link:hover
+.header-menu-link:hover,
 .header-menu-link:focus{
         color: #404bbf;
 }
